--- a/src/main/views/app.jinja2
+++ b/src/main/views/app.jinja2
@@ -3,80 +3,96 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="../static/app.css">
-  <title>MDPSaver - {{ username }}</title>
+  <title>MDSaver - {{ username }}</title>
 </head>
 
 <body onload="createBridge()">
-  <div class="header">
-    <div class="header-logo"></div>
-    <h1>MDPSaver - {{ username }}</h1>
-  </div>
-  <div class="main">
-    <div class="passwd-section">
-      <div class="navbar">
-        <div class="search-block">
-          <input type="text" id="searchflied">
-          <button onclick="filter()">Search</button>
+    <div class="main-container">
+        <div class="left-container">
+            <a href="">Accounts</a>
+            <a href="">Passowrds</a>
         </div>
-        <button onclick="showPasswordPopup()">Add password</button>
-        <div class="popup-container" id="popup" style="display:none;">
-          <span class="popup-close-btn" onclick="hidePopup()">&times;</span>
-          <h1>Add password here</h1>
-          <div class="add-password-form">
-            <div class="add-password-form">
-                <label for="target">Application name</label>
-                <input type="text" name="target" id="target" required>
-                <br>
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" required>
-                <br>
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" required>
-                <br>
-                <label for="Add_icon">Manually provide icon if not found automatically.</label>
-                <input type="checkbox" name="Add_icon" id="Add_icon" checked>
-                <br>
-                <input type="submit" value="Add" id="add" onclick="pushPassword()">
+        <div class="right-container">
+            <div class="header">
+                <div class="header-logo"></div>
+                <h1>MDPSaver - {{ username }}</h1>
             </div>
-        </div>
+            <div class="main">
+                <div class="passwd-section">
+                    <div class="navbar">
+                        <div class="search-block">
+                            <input type="text" id="searchflied" placeholder="Search for a site">
+                            <button onclick="filter()"> <a href=""><img src="search.ico"></a></button>
+                        </div>
+                        <div class="add-password-block">
+                            <button onclick="showPasswordPopup()">Add a new password</button>
+                        </div>
 
-          </div>
-        </div>
-      </div>
-      <div class="passwd-list">
-        {% for passwd in passwords %}
-        <div class="passwd-item">
-          <div class="passwd-icon" style="background-image: url({{ passwd.icon }})"></div>
-          <div class="passwd-info">
-            <div class="passwd-info-row">
-              <div class="passwd-name">
-                <h5>Application or website:</h5>
-                <h2>{{ passwd.target }}</h2>
-              </div>
-              <div class="passwd-login">
-                <h5>Login:</h5>
-                <div class="passwd-block">
-                  <h3>{{ passwd.username }}</h3>
+                        <div class="popup-container" id="popup" style="display:none;">
+                            <span class="popup-close-btn" onclick="hidePopup()">&times;</span>
+                            <h1>Add password here</h1>
+                          <div class="add-password-form">
+                            <div class="add-password-form">
+                                <label for="target">Application name</label>
+                                <input type="text" name="target" id="target" required>
+                                <br>
+                                <label for="username">Username</label>
+                                <input type="text" name="username" id="username" required>
+                                <br>
+                                <label for="password">Password</label>
+                                <input type="password" name="password" id="password" required>
+                                <br>
+                                <label for="Add_icon">Manually provide icon if not found automatically.</label>
+                                <input type="checkbox" name="Add_icon" id="Add_icon" checked>
+                                <br>
+                                <input type="submit" value="Add" id="add" onclick="pushPassword()">
+                            </div>
+                          </div>
+
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="passwd-password">
-                <h5>Password:</h5>
-                <div class="passwd-block">
-                  <h3>{{ passwd.password }} <button onclick="reveal()">reveal</button></h3>
-                </div>
-              </div>
+                  <div class="passwd-list">
+                    {% for passwd in passwords %}
+                    <div class="passwd-item">
+                      <div class="passwd-icon" style="background-image: url({{ passwd.icon }})">
+                          <img src="copy_icon.ico">
+                      </div>
+                      <div class="passwd-info">
+                        <div class="passwd-info-row">
+                          <div class="passwd-name">
+                            <h5>Application or website:</h5>
+                            <h4>{{ passwd.target }}</h4>
+                              <button class="reveal-button" onclick="openTarget('{{ passwd.target }}')"><img src="copy_icon.ico"> </button>
+                          </div>
+                          <div class="password-section">
+                              <div class="passwd-login">
+                                <h5>username / mail adress:</h5>
+                                <div class="passwd-block">
+                                  <h4>{{ passwd.username }}</h4>
+                                    <button onclick="copyToClipboard('{{ passwd.username }}')"><img src="copy_icon.ico"></button>
+                                </div>
+                              </div>
+                              <div class="passwd-password">
+                                <h5>password:</h5>
+                                <div class="passwd-block">
+                                  <h4>{{ passwd.password }} <button onclick="reveal()"><img src="copy_icon.ico"></button></h4>
+                                    <button onclick="copyToClipboard('{{ passwd.password }}')"><img src="copy_icon.ico"></button>
+                                </div>
+                              </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="passwd-edit-icon" style="background-image: url({{ passwd.icon }})">
+                          <img src="copyicon.ico">
+                      </div>
+                    </div>
+                    {% endfor %}
+                  </div>
             </div>
-            <div class="passwd-info-row">
-              <button onclick="openTarget('{{ passwd.target }}')">Open</button>
-              <button onclick="copyToClipboard('{{ passwd.username }}')">Copy Username</button>
-              <button onclick="copyToClipboard('{{ passwd.password }}')">Copy Password</button>
-            </div>
-          </div>
         </div>
-        {% endfor %}
-      </div>
     </div>
-  </div>
+
 </body>
 
 </html>
