--- a/src/main/views/login.jinja2
+++ b/src/main/views/login.jinja2
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="../static/login.css">
     <body onload="createBridge()">
-        <h1>login hf8wefew</h1>
+        <h1>Login</h1>
 
         <h2 style="color: red;" id="wrong_password"></h2>
 
