`Bridge` | `FE`: Load app bug when using startup fixed; little FE work

--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -1,4 +1,9 @@
 /* Styles for main container */
+html {
+    font-family: Inter, serif;
+    background-color: red; /* to show the bad border */
+}
+
 title{
     display: flex;
     justify-content: center;
