--- a/src/main/views/app.jinja2
+++ b/src/main/views/app.jinja2
@@ -9,8 +9,10 @@
 <body onload="createBridge()">
     <div class="main-container">
         <div class="left-container">
-            <a href="">Accounts</a>
             <a href="">Passowrds</a>
+            <a href="">Generate</a>
+            <br><br><br> <!-- to make look better (I suck at front end) -->
+            <a href="">Settings</a>
         </div>
         <div class="right-container">
             <div class="header">
@@ -45,7 +47,6 @@
                                 <label for="Add_icon">Manually provide icon if not found automatically.</label>
                                 <input type="checkbox" name="Add_icon" id="Add_icon" checked>
                                 <br>
-                                <input type="submit" value="Add" id="add" onclick="pushPassword()">
                                 <input type="submit" value="Add" id="add" onclick="pushPassword()">
                             </div>
                           </div>
