--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -279,7 +279,7 @@ button:hover{
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    color: white;git stat
+    color: white;
 }
 
 .add-password-form [type=submit]{
