--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -39,6 +39,7 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 
 .main-container .left-container a{
@@ -65,7 +66,7 @@ html {
   display: flex;
   align-items: center;
   padding: 3px;
-  background-color: #333;
+  background-color: #222;
   color: #fff;
 }
 
