login and startup pages done (waiting for review)

--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -239,7 +239,7 @@ button span:after {
 
 .add-password-block button:hover{
     border-radius: 4px;
-    background-color: darkblue;
+    background-color: deepskyblue;
     border: none;
     padding: 14px 40px;
     font-size: 15px;
