--- a/src/main/views/startup.jinja2
+++ b/src/main/views/startup.jinja2
@@ -1,48 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="../static/startup.css">
 
-    <body onload="createBridge()">
-        <h1>Startup Page</h1>
+<body onload="createBridge()">
 
-        <label for="username_input">
-            Username:
-        </label>
-        <input type="text" id="username_input">
+    <h1>Startup page</h1>
 
-        <br> <br>
+    <div class="regForm">
+        <div class="tab">
+            <h2>Step 1</h2>
+            <label for="password_input">
+                <b>Username</b>
+            </label>
+            <p><input type="text" placeholder="Username..." id="username_input" oninput="this.className = ''"></p>
+            <label for="password_input">
+                <b>Password</b>
+            </label>
+            <p><input type="password" placeholder="Password..." id="password_input" oninput="this.className = ''"></p>
+        </div>
 
-        <label for="password_input">
-            Password:
-        </label>
-        <input type="password" id="password_input">
-        <br> <br>
+        <div class="tab">
+            <h2>Step 2</h2>
+            <label for="question_input">
+                <b>Question</b>
+            </label>
+           <p><input type="text" id="question_input" placeholder="Question..." oninput="this.className = ''"></p>
+        </div>
 
-        <label for="question_input">
-            Question:
-        </label>
-        <input type="text" id="question_input">
-        <br> <br>
+        <div class="tab">
+            <h2>Step 3</h2>
+            <label for="answer_input">
+                <b>Answer</b>
+            </label>
+            <p><input type="text" id="answer_input" placeholder="Username..." oninput="this.className = ''"></p>
+        </div>
 
-        <label for="answer_input">
-            Answer:
-        </label>
-        <input type="text" id="answer_input">
-        <br> <br>
+        <div >
+          <div style="float:right;">
+            <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+            <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+          </div>
+        </div>
 
-        <button onclick="submit()">
-            Create MDPSaver Account
-        </button>
-        <br> <br>
+        <div class="dots" style="text-align:center;margin-top:40px;">
+          <span class="step"></span>
+          <span class="step"></span>
+          <span class="step"></span>
+        </div>
         {% if nbr_user > 0 %}
             <button onclick="bridge.callLogin()">
                 Login Instead
             </button>
         {% endif %}
-    </body>
+    </div>
+</body>
 </html>
 
 <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
 <script>
+
+    var currentTab = 0; // Current tab is set to be the first tab (0)
+    showTab(currentTab); // Display the current tab
+
+    function showTab(n) {
+      // This function will display the specified tab of the form ...
+      var x = document.getElementsByClassName("tab");
+      x[n].style.display = "block";
+      // ... and fix the Previous/Next buttons:
+      if (n === 0) {
+        document.getElementById("prevBtn").style.display = "none";
+      } else {
+        document.getElementById("prevBtn").style.display = "inline";
+      }
+      if (n === (x.length - 1)) {
+        document.getElementById("nextBtn").innerHTML = "Create MDPSaver Account";
+      } else {
+        document.getElementById("nextBtn").innerHTML = "Next";
+      }
+      // ... and run a function that displays the correct step indicator:
+      fixStepIndicator(n)
+    }
+
+    function nextPrev(n) {
+      // This function will figure out which tab to display
+      var x = document.getElementsByClassName("tab");
+      // Exit the function if any field in the current tab is invalid:
+      if (n === 1 && !validateForm()) return false;
+      // Hide the current tab:
+      x[currentTab].style.display = "none";
+      // Increase or decrease the current tab by 1:
+      currentTab = currentTab + n;
+      // if you have reached the end of the form... :
+      if (currentTab >= x.length) {
+        //...the form gets submitted:
+        submit();
+        return false;
+      }
+      // Otherwise, display the correct tab:
+      showTab(currentTab);
+    }
+
+    function validateForm() {
+      // This function deals with validation of the form fields
+      var x, y, i, valid = true;
+      x = document.getElementsByClassName("tab");
+      y = x[currentTab].getElementsByTagName("input");
+      // A loop that checks every input field in the current tab:
+      for (i = 0; i < y.length; i++) {
+        // If a field is empty...
+        if (y[i].value === "") {
+          // add an "invalid" class to the field:
+          y[i].className += " invalid";
+          // and set the current valid status to false:
+          valid = false;
+        }
+      }
+      // If the valid status is true, mark the step as finished and valid:
+      if (valid) {
+        document.getElementsByClassName("step")[currentTab].className += " finish";
+      }
+      return valid; // return the valid status
+    }
+
+    function fixStepIndicator(n) {
+      // This function removes the "active" class of all steps...
+      var i, x = document.getElementsByClassName("step");
+      for (i = 0; i < x.length; i++) {
+        x[i].className = x[i].className.replace(" active", "");
+      }
+      //... and adds the "active" class to the current step:
+      x[n].className += " active";
+    }
+
+
     // Create the QWebChannel object and connect to the bridge
     async function createBridge() {
         await new QWebChannel(qt.webChannelTransport, function (channel) {
